test/classes/initializers/siblingCall/middleBad.good
middleBad.chpl:5: In initializer:
middleBad.chpl:6: error: field initialization not allowed with sibling initializer call
